# AudioInterface

./: .clangd  .gitignore  .gitmodules  CMakeCache.txt  CMakeLists.txt  CPackConfig.cmake  CPackSourceConfig.cmake  Makefile  README.md  add_git_submodule.cmake  cmake_install.cmake  compile_commands.json  todos.md
.cache/clangd/index/: audiointerface.cpp.385FC082DF43B9DC.idx  audiointerface.h.4A2D06F0A080D696.idx  bufferservice.cpp.65F888A8F3869241.idx  bufferservice.h.FA780A4347D59EC0.idx  bus.cpp.940239C3373A623A.idx  bus.h.423BF2D0C41DD566.idx  channel.cpp.A1C048020DEDA8A0.idx  channel.h.F48F50531C40E4F6.idx  clockbase.cpp.5A126915C689C469.idx  clockbase.h.FA6DB1F35B767EF4.idx  iodef.h.B50EB6394D21C264.idx  main.cpp.98C6CA7B8418FC9E.idx  oscillator.cpp.D1364FFBC7F8D0E0.idx  oscillator.h.C22DD24E7F43126D.idx  pa_allocation.c.5C6E667E0E82A5F6.idx  pa_allocation.h.6C04C77F066FDCB1.idx  pa_converters.c.EAF94CE1773D992D.idx  pa_converters.h.E393BFA2C8E13F22.idx  pa_cpuload.c.5618EC7A13EF1E4F.idx  pa_cpuload.h.C66CAEFAA2A00A4E.idx  pa_debugprint.c.72B3B42E2B9A6373.idx  pa_debugprint.h.F0B85578F1F198E1.idx  pa_dither.c.CBC1257AD9477CEC.idx  pa_dither.h.A6CA25B5A52B6863.idx  pa_endianness.h.A7F3854B36604539.idx  pa_front.c.DB61919DBED48C55.idx  pa_gitrevision.h.B0033D1A35D3E7C6.idx  pa_hostapi.h.0747EFAA50A0C8F5.idx  pa_mac_core.c.13EBC4426E1F8D7D.idx  pa_mac_core.h.5607A5754A260CF6.idx  pa_mac_core_blocking.c.76C6A0EB0EF8A635.idx  pa_mac_core_blocking.h.24C0C22DEC7AEBD3.idx  pa_mac_core_internal.h.17861802E9463E7B.idx  pa_mac_core_utilities.c.26FCF779E7C4DC69.idx  pa_mac_core_utilities.h.BB55B785373FF22C.idx  pa_memorybarrier.h.811EF04A85E2D12F.idx  pa_process.c.B089812104052CA8.idx  pa_process.h.C75C797B17CE31D2.idx  pa_ringbuffer.c.6967A5A1572B2D60.idx  pa_ringbuffer.h.7666E25E589E9FE4.idx  (+16 more)
.cmake/api/v1/reply/: cache-v2-696bac3bda43f33024df.json  cmakeFiles-v1-af1ec38a31aa265f2620.json  codemodel-v2-9235247e7a7d392478bb.json  codemodel-v2-ad7d74dc073aec919adb.json  directory-extern.portaudio-Release-2c43fff825b3b311844c.json  directory-extern.portaudio-Release-c38953af76a24e6c8e3d.json  directory-src.aud-Release-57db7808bf6da6adffbc.json  index-2024-04-20T09-42-24-0866.json  index-2024-04-21T11-54-07-0320.json  index-2024-05-20T05-20-35-0822.json  target-PortAudio-Release-6299c54ec2c2ee10b406.json  target-PortAudio-Release-98015debe6414c2b1186.json  target-audiointerface-Release-050038e60b0d74de2763.json  target-audiointerface-Release-cb5dc9e5857e9c778b9c.json  target-uninstall-Release-948b96ebcfb0aa468c10.json
inc/aud/: adsr.h  audioevent.h  audioeventmap.h  audioeventqueue.h  audiointerface.h  bufferservice.h  bus.h  channel.h  channel_audio.h  channel_midi.h  clockbase.h  iodef.h  metronome.h  midievent.h  midieventmap.h  midieventqueue.h  midimessaging.h  oscillator.h  resourcemanager.h  ringbuffer.h  soundresource.h  wavetable.h  wtoscillator.h
inc/aud/filter/: biquad.h
inc/tool/: curvetool.h  messagable.h  wavtool.h
src/: CMakeLists.txt  Makefile  audiointerface  cmake_install.cmake  main.cpp  readWav  test_find_event  test_find_event.cpp  wavTest.cpp
src/aud/: CMakeLists.txt  Makefile  adsr.cpp  audioevent.cpp  audioeventmap.cpp  audioeventqueue.cpp  audiointerface.cpp  bufferservice.cpp  bus.cpp  channel.cpp  channel_audio.cpp  channel_midi.cpp  clockbase.cpp  cmake_install.cmake  iodef.cpp  metronome.cpp  midievent.cpp  midieventmap.cpp  midieventqueue.cpp  midimessaging.cpp  oscillator.cpp  resourcemanager.cpp  ringbuffer.cpp  wavetable.cpp  wtoscillator.cpp
src/tool/: CMakeLists.txt  adsr_tool.py  curvetool.cpp  pyqtgr.py  wavtool.cpp
tests/: CMakeLists.txt  curve2.cpp  curves  curvetest.cpp  readWav
