cmake_minimum_required(VERSION 3.12)
set(CMAKE_CXX_STANDARD 20)
project ( tests )
add_executable (curves curve2.cpp)
target_include_directories(curves PUBLIC ../inc/)
target_include_directories(curves PUBLIC ../inc/tool)
target_include_directories(curves PUBLIC ../inc/aud)
target_link_directories(curves PUBLIC ../lib/)
target_link_libraries(curves PUBLIC audiocomponents)
add_executable (readWav wavTest.cpp)
target_include_directories(readWav PUBLIC ../inc/)
target_include_directories(readWav PUBLIC ../inc/tool)
target_include_directories(readWav PUBLIC ../inc/aud)
target_link_directories(readWav PUBLIC ../lib/)
target_link_libraries(readWav PUBLIC tooling)
set(CMAKE_EXPORT_COMPILE_COMMANDS TRUE)

